Changes: Add list test

--- a/www/index.html
+++ b/www/index.html
@@ -6,11 +6,12 @@
         <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
         <link rel="stylesheet" type="text/css" href="css/mobile-nav.css" />
         <link rel="stylesheet" type="text/css" href="css/base.css">
-        <link rel="stylesheet" type="text/css" href="css/action-bars.css">
         <link rel="stylesheet" type="text/css" href="css/button.css">
         <link rel="stylesheet" type="text/css" href="css/icomoon.css">
-        <link rel="stylesheet" type="text/css" href="css/spinners.css">
         <link rel="stylesheet" type="text/css" href="css/content.css">
+        <link rel="stylesheet" type="text/css" href="css/actionbars.css">
+        <link rel="stylesheet" type="text/css" href="css/spinners.css">
+        <link rel="stylesheet" type="text/css" href="css/lists.css">
         <link rel="stylesheet" type="text/css" href="css/app.css">
     </head>
     <body>
